# insanity-llm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  verify_setup.py
.github/: copilot-instructions.md
data/: sample_dpo_dataset.jsonl
examples/: train_config.sh
insanityllm/: __init__.py  config.py  utils.py
insanityllm/cli/: __init__.py  download.py  train.py
scripts/: download_datasets.py  setup_check.py  train_config.sh  train_dpo.py  train_qwen3_4b.py  utils.py
